# aestetic

./: .gitignore  CMakeLists.txt  Makefile  OLDMAKE  README.md  doom  doom_nukem  idk.txt  sample.txt  smh.txt
DELETEDed/: ed_bmp_reader.c  ed_detect_assets.c  ed_detect_wall.c  ed_door_toggle.c  ed_draw_assets.c  ed_draw_string.c  ed_editor.c  ed_editor_assets_handler.c  ed_editor_sector.c  ed_event.c  ed_event_keyboard.c  ed_event_mouse_button.c  ed_get_animation_files.c  ed_get_monster_files.c  ed_init_structures.c  ed_interface.c  ed_interface_properties.c  ed_interface_select_map.c  ed_pixel.c  ed_read_map.c  ed_read_map_assets.c  ed_read_map_fix.c  ed_save_assets.c  ed_save_file.c  ed_save_monster.c  ed_save_posters.c  ed_save_sound.c  ed_save_weapons.c
done/: Makefile  dd.c  wolf.h  wolf3d
editor/: Makefile  adder.c  bmp_reader.c  char_selector.c  dm_editor  draw_info.c  draw_sector.c  font.c  init_monsters.c  init_sdl.c  init_sector.c  init_sprites.c  init_textures.c  load_anims.c  load_weapon.c  loop.c  loop_creation.c  main.c  r_bold_line.c  r_circle.c  r_controls.c  r_font.c  r_font_chars.c  r_font_renderer.c  r_font_utils.c  r_helpers.c  r_line.c  r_main.c  r_menu.c  r_mouse_controller.c  r_pickers.c  r_push.c  r_put_sprite.c  r_render_sector_sprites.c  r_render_shit.c  r_sdl.c  r_sdl2.c  r_selectors.c  r_texture_picker.c  r_vector.c  (+8 more)
includes/: alt.h  bisquit.h  common.h  defines.h  doom.h  doom_nukem.h  editor.h  functions.h  macros.h  structs.h  structs_doom.h
libft/: Makefile  ft_abs.c  ft_atoi.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstiter.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_min.c  ft_printf_conv_char.c  ft_printf_conv_misc.c  ft_printf_conv_non_printable_str.c  ft_printf_conv_str.c  ft_printf_parse.c  ft_printf_widechar.c  ft_putchar_fd.c  ft_putendl.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_striter.c  ft_strjoin.c  ft_strlen.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_wordcount.c  (+2 more)
libt/: ft_atof.c  ft_bzero.c  ft_isalnum.c  ft_isprint.c  ft_itoa.c  ft_itoa_static.c  ft_lstdel.c  ft_lstdelone.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memcmp.c  ft_memset.c  ft_min.c  ft_pow.c  ft_printf.c  ft_printf.h  ft_printf_bignum.c  ft_printf_conv_float.c  ft_printf_conv_signed.c  ft_printf_conv_unsigned.c  ft_printf_dispatch.c  ft_printf_get_args.c  ft_putchar.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrn_fd.c  ft_strcat.c  ft_strchr.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striteri.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  (+4 more)
maps/: dsf.DNMAP  f.DNMAP  r.DNMAP
src/: Edifficulty_menu.c  Ejump.c  Eload_weapons_texture.c  Epress_e.c  Ohelp_screen.c  Ointro_screen.c  _load.data.c  activate_door.c  aiming_draw.c  arrays.c  asset_collision.c  atoi.c  blaster_col.c  blaster_col_recur.c  brazenhem.c  ceilHeight.c  ceil_height.c  char_selector.c  circle.c  clip_wall.c  collision.c  collision_monster.c  collision_player.c  color_buffer.c  console_output.c  contols_listen.c  controls_apply.c  controls_init.c  controls_listen.c  controls_mouse_apply.c  create_projectile.c  d_ammo_hud.c  d_asseting.c  d_asseting2.c  d_ceil_floor.c  d_huds.c  d_jetp_hud.c  d_monster.c  d_proj.c  d_sky.c  (+146 more)
srced/: Makefile  bmp_reader.h  ed_add_protection.c  ed_bmp_reader.c  ed_conversion.c  ed_detect_assets.c  ed_detect_wall.c  ed_door_toggle.c  ed_draw.c  ed_draw_assets.c  ed_draw_string.c  ed_editor.c  ed_editor_assets_handler.c  ed_editor_assets_handler2.c  ed_editor_functions.c  ed_editor_sector.c  ed_editor_wall.c  ed_event.c  ed_event_assets_options.c  ed_event_functions.c  ed_event_functions2.c  ed_event_keyboard.c  ed_event_mouse_button.c  ed_event_sector_options.c  ed_fix_data_to_save.c  ed_get_animation_files.c  ed_get_monster_files.c  ed_get_weapon_list.c  ed_init_assets.c  ed_init_editor.c  (+26 more)
(+1 files in other folders)
