cmake_minimum_required (VERSION 2.6)
project (doom)
add_executable(doom
src/activate_door.c
src/asset_collision.c
src/atoi.c
src/blaster_col.c
src/blaster_col_recur.c
src/ceilHeight.c
src/clip_wall.c
src/collision.c
src/color_buffer.c
src/create_projectile.c
src/draw_aim_cross.c
src/draw_assets.c
src/draw_ceil.c
src/draw_floor.c
src/draw_hud.c
src/draw_hud2.c
src/draw_monster.c
src/draw_sprite.c
src/draw_wall.c
src/draw_wall2.c
src/draw_weapon.c
src/events.c
src/find_closest_wall_dist.c
src/fix_neighborsects.c
src/floorHeight.c
src/fly_gravity.c
src/font.c
src/get_rot_monster.c
src/getpixel.c
src/handle_finish.c
src/handle_respawn.c
src/handlers.c
src/heightCalculations.c
src/inertia.c
src/init_font.c
src/init_monsters.c
src/init_player.c
src/init_projectiles.c
src/init_sdl.c
src/inside.c
src/jetpack.c
src/jump.c
src/load_assets.c
src/load_map.c
src/load_monsters_texture.c
src/load_sound.c
src/loop.c
src/m16.c
src/m16_recur.c
src/m16_util.c
src/main.c
src/main_n.c
src/monster_anim_state.c
src/monster_behaviour.c
src/monster_behaviour_chargingdemon.c
src/monster_collision.c
src/movement.c
src/msg.c
src/n_allocators.c
src/n_validators.c
src/pixel.c
src/player_actions.c
src/player_damage.c
src/press_e.c
src/proj_wall.c
src/projectile_collision.c
src/render.c
src/render_sector.c
src/reorder_sprite.c
src/shade.c
src/sound.c
src/swap_list.c
src/texanim.c
src/update.c
src/update_2.c
src/update_anim_projectile.c
src/vector.c
includes/common.h
includes/defines.h
includes/doom_nukem.h
includes/structs_doom.h
        src/loading.c
        editor/bmp_reader.c
        editor/init_monsters.c
        editor/tex_finder.c
        editor/save_sectors.c
        editor/init_sector.c
        editor/save_monsters.c
        editor/load_weapon.c
        editor/save_tex.c
        editor/save_weapon.c
        editor/save_mnst_tex.c
        editor/init_sprites.c
        editor/init_textures.c
        editor/load_anims.c
        editor/loop.c
        editor/draw_info.c
        editor/font.c
        editor/main.c
        editor/r_bold_line.c
        editor/savior.c
        editor/r_controls.c
        editor/r_helpers.c
        editor/r_line.c
        editor/r_mouse_controller.c
        editor/r_push.c
        editor/r_sdl.c
        editor/r_sdl2.c
        editor/r_selectors.c
        editor/r_vector.c
        editor/reopen.c
        editor/loop_creation.c
        DELETEDed/ed_add_protection.c
DELETEDed/ed_bmp_reader.c
DELETEDed/ed_conversion.c
DELETEDed/ed_detect_assets.c
DELETEDed/ed_detect_wall.c
DELETEDed/ed_door_toggle.c
DELETEDed/ed_draw.c
DELETEDed/ed_draw_assets.c
DELETEDed/ed_draw_string.c
DELETEDed/ed_editor.c
DELETEDed/ed_editor_assets_handler.c
DELETEDed/ed_editor_assets_handler2.c
DELETEDed/ed_editor_functions.c
DELETEDed/ed_editor_sector.c
DELETEDed/ed_editor_wall.c
DELETEDed/ed_event.c
DELETEDed/ed_event_assets_options.c
DELETEDed/ed_event_functions.c
DELETEDed/ed_event_functions2.c
DELETEDed/ed_event_keyboard.c
DELETEDed/ed_event_mouse_button.c
DELETEDed/ed_event_sector_options.c
DELETEDed/ed_fix_data_to_save.c
DELETEDed/ed_get_animation_files.c
DELETEDed/ed_get_monster_files.c
DELETEDed/ed_get_weapon_list.c
DELETEDed/ed_init_assets.c
DELETEDed/ed_init_editor.c
DELETEDed/ed_init_structures.c
DELETEDed/ed_init_texture.c
DELETEDed/ed_interface.c
DELETEDed/ed_interface_functions.c
DELETEDed/ed_interface_map_list.c
DELETEDed/ed_interface_print_values.c
DELETEDed/ed_interface_properties.c
DELETEDed/ed_interface_properties2.c
DELETEDed/ed_interface_select_map.c
DELETEDed/ed_list_manager_assets.c
DELETEDed/ed_list_manager_monster.c
DELETEDed/ed_pixel.c
DELETEDed/ed_read_map.c
DELETEDed/ed_read_map_assets.c
DELETEDed/ed_read_map_fix.c
DELETEDed/ed_save_assets.c
DELETEDed/ed_save_file.c
DELETEDed/ed_save_monster.c
DELETEDed/ed_save_posters.c
DELETEDed/ed_save_sound.c
DELETEDed/ed_save_weapons.c
DELETEDed/ed_utils.c
DELETEDed/main.c)
